examples/k8s/blog-demo/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nova
spec:
  plugin:
    traefik-nova-plugin:
      novaContainerUrl: http://nova-waf:80
