examples/k8s/blog-demo/nova-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nova
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      nova: nova
  template:
    metadata:
      labels:
        nova: nova
    spec:
      containers:
      - name: nova
        image: novaadc/nova-client:latest
---
apiVersion: v1
kind: Service
metadata:
  name: nova-waf
  namespace: default
spec:
  type: NodePort
  selector:
    nova: nova
  ports:
  - port: 80
    targetPort: 80
