examples/k8s/blog-demo/blog-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: blog-ingress
  namespace: blog
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-nova@kubernetescrd
    
spec:
  rules:
    - host: traefik.nova-adc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-svc
                port:
                  number: 80
